A.F....... [ZBX-4311] fixed graph prototype name validation (pavels)
A.F....... [ZBXNEXT-906] redesign Configuration->Host groups (Eduard)
....I..... [ZBX-4024] new build process for database schema and data, also new location of database related files; db data file uses transactions now (Alexei)

Bug fixes:
A......... [ZBX-4519] fixed impossibility to delete template : Unknown column 'h.name' (sanja)
..F....... [ZBX-4468] removed possibility to add to value mappings few items with same name (Slava)
..F....... [ZBX-4483] added proper icon image resizing (pavels)
..F....... [ZBX-4456] fixed error position in IT services form (Vedmak)
..F....... [ZBX-4470] fixed node initialization in DM setup (pavels)
..F....... [ZBX-4407] fixed import hosts from 1.8 version (sanja)
A......... [ZBX-4425] fixed item prototype interface mapping when cloning a discovery rule (pavels)
..F....... [ZBX-4459] fixed values are cleared when try to add incorrect value mapping, negative values now allowed (Vedmak)
..F....... [ZBX-4458] fixed js error in global macro form, changed layout to be consistant with other places (Vedmak)
..F....... [ZBX-4449] fixed IT services SLA graph permission checks (pavels)
A......... [ZBX-4448] fixed proxy interface validation (pavels)
..F....... [ZBX-4455] fixed the 'sortorder' field validation in the IT services form (pavels)
..F....... [ZBX-4427] fixed map element host group highlighting (pavels)
..F....... [ZBX-4446] fixed event duration calculation (pavels)
........S. [ZBX-2806] fixed possible double notification messages (dimir,Sasha)
A......... [ZBX-4425] fixed unsetting interface when performing Item::udpate requests (pavels)
..F....... [ZBX-4436] fixed wrong sql query in discovery popup (Slava)
....I..... [ZBX-4429] fixed problem with wrong mysql comment tag and warning in mysql function when  update to 1.9.8 (Slava)
........S. [ZBX-4418] fixed possible SQL errors while processing of time functions (Sasha)