@@ -369,7 +369,7 @@
 	}
 
 	$macroTab = new CTable();
-	$macroTab->addRow(array(S_MACRO, SPACE, S_VALUE));
+	$macroTab->addRow(array(_('Macro'), SPACE, _('Value')));
 	$macroTab->setAttribute('id', 'userMacros');
 
 	$jsInsert = '';
@@ -394,7 +394,7 @@
 	$macrolist = new CFormList('macrolist');
 	$macrolist->addRow($macroTab);
 
-	$divTabs->addTab('macroTab', S_MACROS, $macrolist);
+	$divTabs->addTab('macroTab', _('Macros'), $macrolist);
 // } MACROS WIDGET
 
 	$frmHost->addItem($divTabs);
